--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>midtrans</artifactId>
+    <artifactId>reNewBuy</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
@@ -87,11 +87,11 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.1</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
             <version>1.8.6</version>
-        </dependency>
+        </dependency>  -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -106,7 +106,7 @@
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>4.3.3</version>
+            <version>4.1.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -152,12 +152,12 @@
                         </goals>
                         <configuration>
                             <includes>
-                                <include>**/RunnerAPI.java</include>
+                                <include>**/RunnerUI1.java</include>
                             </includes>
-                            <parallel>methods</parallel>
+                            <!--parallel>methods</parallel>
                             <threadCount>3</threadCount>
                             <perCoreThreadCount>true</perCoreThreadCount>
-                            <!--                            <testFailureIgnore>true</testFailureIgnore>-->
+                            <testFailureIgnore>true</testFailureIgnore>-->
                         </configuration>
                     </execution>
                 </executions>
