Added Compare Health Insurance functionality with minor change

--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,7 @@
                         <configuration>
                             <includes>
                                 <include>**/RunnerUI1.java</include>
+                                <!--<include>**/RunnerUI2.java</include>  -->
                             </includes>
                             <!--parallel>methods</parallel>
                             <threadCount>3</threadCount>
